fns on tilde key

--- a/keyd/default.conf
+++ b/keyd/default.conf
@@ -5,11 +5,11 @@
 ` = overload(funcs, `)
 - = overload(funcs, -)
 ; = overload(psinkbols, ;)
-tab = overload(cursor, tab)
-leftbrace = overload(cursor, leftbrace)
-capslock = overload(funcs, esc)
-'        = overload(funcs, ')
-rightalt = overload(altgr, enter)
+tab = overload(nav, tab)
+leftbrace = overload(nav, leftbrace)
+capslock = overload(keypad, esc)
+'        = overload(keypad, ')
+rightalt = overload( altgr, enter)
 rightmeta = overload(control, rightcontrol)
 leftmeta = overload(meta, macro(leftcontrol+insert))
 / = overload(shift, /)  
@@ -18,31 +18,39 @@ leftmeta = overload(meta, macro(leftcontrol+insert))
 leftshift = capslock
 rightshift = capslock
 
+[alt]
+capslock = macro(esc esc)
+
 [meta]
 9 = macro(leftcontrol+tab)
 8 = macro(leftcontrol+leftshift+tab)
 
-[cursor]
+[nav]
 w = overload(ulprops, home)
 r = overload(urprops, end)
-s = overload(lprops, left)
-e = overload(uprops, up)
-d = overload(mprops, down)
-f = overload(rprops, right)
+s = overload(lprops, macro(leftcontrol+left))
+e = overload(uprops, macro(leftcontrol+up))
+d = overload(mprops, macro(leftcontrol+down))
+f = overload(rprops, macro(leftcontrol+right))
+z = overload(dlprops, left)
+x = overload(dprops, left)
+c = overload(drprops, right)
 t = pageup
 g = pagedown
-z = macro(props+home)
-x = macro(props+end)
-c = layer(slowmouse)
-v = xfer
+
+q = up
+a = down
+v = layer(slowmouse)
+rightalt = layer(slowmouse)
+# config=tools, scale=launchA dashboard=launchB zoom=fullscreen rewind=audioRewind forward=86forward
 
 capslock = clear()
-tab = toggle(cursor)
-leftbrace = toggle(cursor)
+tab = toggle(nav)
+leftbrace = toggle(nav)
 
 y = macro(props+home)
-8 = macro(props+pageup)
-9 = macro(props+pagedown)
+8 = kbdillumup
+9 = kbdillumdown
 p = macro(props+end)
 h = timeout(macro(leftmouse), 233, macro(menu menu))
 u = macro2(20, 35, macro(prog1))
@@ -56,6 +64,12 @@ m = macro2(20, 35, macro(f16))
 . = macro2(20, 35, macro(f18))
 ; = overload(psinkbols, rightmouse)
 n = xfer
+
+[shift+nav]
+e = macro2(20, 50, macro(leftcontrol+leftshift+up))
+s = macro2(20, 50, macro(leftcontrol+leftshift+left))
+d = macro2(20, 50, macro(leftcontrol+leftshift+down))
+f = macro2(20, 50, macro(leftcontrol+leftshift+right))
 
 [ulprops]
 7 = macro(props+prog1+7)
@@ -309,30 +323,42 @@ leftshift  = rightmouse
 backspace = delete
 
 [altgr]
+h = macro(front+h)
 up = volumeup
 down = volumedown
 left = micmute
 right = mute
 
 [altgr+psinkbols]
-h = home
-j = pagedown
-k = pageup
-l = end
+h = macro(leftmeta+left)
+j = macro(leftmeta+down)
+k = macro(leftmeta+up)
+l = macro(leftmeta+right)
 
 [funcs]
 2 = f1
 3 = f2
 4 = f3
-w = f4
-e = f5
-r = f6
-s = f7
-d = f8
-f = f9
-z = f10
-x = f11
-c = f12
+5 = f4
+w = f5
+e = f6
+r = f7
+t = f8
+s = f9
+d = f10
+f = f11
+g = f12
+
+h = left
+j = down
+k = up
+l = right
+
+[keypad]
+s = left
+d = down
+f = right
+e = up
 
 m = kp1
 , = kp2
@@ -353,10 +379,6 @@ n = kpminus
 p = backspace
 rightmeta = kpdot
 rightcontrol = kpdot
-#h = left
-#j = down
-#k = up
-#l = right
 
 [slowmouse]
 y = macro(props+home)
