alt+altgr backspace and similar

--- a/keyd/default.conf
+++ b/keyd/default.conf
@@ -5,21 +5,26 @@
 ` = overload(funcs, `)
 - = overload(funcs, -)
 ; = overload(psinkbols, ;)
-tab = overload(nav, tab)
+tab       = overload(nav, tab)
 leftbrace = overload(nav, leftbrace)
-capslock = overload(keypad, esc)
-'        = overload(keypad, ')
+capslock = overload(meta, esc)
+'        = overload(meta, ')
 rightalt = overload( altgr, enter)
-rightmeta = overload(control, rightcontrol)
-leftmeta = overload(meta, macro(leftcontrol+insert))
 / = overload(shift, /)  
+leftmeta = overload(keypad, macro(leftcontrol+insert))
+rightmeta = layer(control)
 
 [shift]
 leftshift = capslock
+leftmeta = capslock
 rightshift = capslock
+/ = capslock
 
 [alt]
 capslock = macro(esc esc)
+rightalt = backspace
+rightcontrol = delete
+rightmeta    = delete
 
 [meta]
 9 = macro(leftcontrol+tab)
@@ -315,12 +320,9 @@ z = @
 x = /
 c = *
 v = \
-rightalt = backspace
-rightmeta    = delete
-rightcontrol = delete
-#leftalt = timeout(macro(leftmouse), 233, macro(menu menu))
-leftshift  = rightmouse
-backspace = delete
+rightalt = noop
+rightmeta = noop
+rightcontrol = noop
 
 [altgr]
 h = macro(front+h)
