restored left arrows for left hand

--- a/keyd/default.conf
+++ b/keyd/default.conf
@@ -33,12 +33,12 @@ rightmeta    = delete
 [nav]
 w = overload(ulprops, home)
 r = overload(urprops, end)
-s = overload(lprops, macro(leftcontrol+left))
-e = overload(uprops, macro(leftcontrol+up))
-d = overload(mprops, macro(leftcontrol+down))
-f = overload(rprops, macro(leftcontrol+right))
+s = overload(lprops, left)
+e = overload(uprops, up)
+d = overload(mprops, down)
+f = overload(rprops, right)
 z = overload(dlprops, left)
-x = overload(dprops, left)
+x = overload(dprops, down)
 c = overload(drprops, right)
 t = pageup
 g = pagedown
@@ -69,6 +69,10 @@ m = macro2(20, 35, macro(f16))
 . = macro2(20, 35, macro(f18))
 ; = overload(psinkbols, rightmouse)
 n = xfer
+
+[control+nav]
+s = macro(leftcontrol+left)
+f = macro(leftcontrol+right)
 
 [shift+nav]
 e = macro2(20, 50, macro(leftcontrol+leftshift+up))
@@ -357,6 +361,8 @@ k = up
 l = right
 
 [keypad]
+q = macro(leftmeta+q)
+a = macro(leftmeta+a)
 s = left
 d = down
 f = right
