kanata changes. endgame layout? v1

--- a/keyd/default.conf
+++ b/keyd/default.conf
@@ -10,25 +10,66 @@ leftbrace = overload(nav, leftbrace)
 capslock = overload(meta, esc)
 '        = overload(meta, ')
 rightalt = overload( altgr, enter)
-/ = overload(shift, /)  
-leftmeta = overload(keypad, macro(leftcontrol+insert))
+/ = overload(vimft, /)  
+leftcontrol = overload(control, macro(leftcontrol+/))
 rightmeta = layer(control)
+leftmeta = front
+#space = overloadt2(stallcuts, space, 300)
 
 [shift]
-leftshift = capslock
 leftmeta = capslock
-rightshift = capslock
-/ = capslock
+
+[vimft:S]
+h = left
+j = down
+k = up 
+l = right
+leftshift = capslock
+
+[psinkbols]
+y = &
+u = equal
+i = <
+o = >
+h = #
+j = ^
+k = $
+l = *
+n = ?
+m = _
+, = %
+. = \
+
+~ = macro(->)
+tab = `
+q = +
+w = [
+e = ]
+r = {
+t = |
+a = -
+s = (
+d = )
+f = }
+g = macro(:)
+leftshift = ~
+z = @
+x = "
+c = '
+v = !
 
 [alt]
 capslock = macro(esc esc)
 rightalt = backspace
 rightcontrol = delete
 rightmeta    = delete
+[ = macro(leftalt+delete)
+' = macro(leftalt+backspace)
 
 [meta]
 9 = macro(leftcontrol+tab)
 8 = macro(leftcontrol+leftshift+tab)
+
 
 [nav]
 w = overload(ulprops, home)
@@ -58,10 +99,10 @@ y = macro(props+home)
 9 = kbdillumdown
 p = macro(props+end)
 h = timeout(macro(leftmouse), 233, macro(menu menu))
-u = macro2(20, 35, macro(prog1))
-i = macro2(20, 35, macro(prog2))
-o = macro2(20, 35, macro(prog3))
-j = macro2(20, 35, macro(prog4))
+u = macro2(20, 35, macro(f13))  #prog1... prog4
+i = macro2(20, 35, macro(f14))
+o = macro2(20, 35, macro(f19))
+j = macro2(20, 35, macro(f20))
 k = macro(leftshift+f14) 
 l = macro2(20, 35, macro(f15))
 m = macro2(20, 35, macro(f16))
@@ -85,7 +126,7 @@ f = macro2(20, 50, macro(leftcontrol+leftshift+right))
 8 = macro(props+prog1+8)
 9 = macro(props+prog1+9)
 0 = macro(props+prog1+0)
-- = macro(props+prog1+-)
+- = macro(props+prog1+-)lu
 y = macro(props+prog1+y)
 u = macro(props+prog1+u)
 i = macro(props+prog1+i)
@@ -289,57 +330,12 @@ m = macro(props+f17+m)
 . = macro(props+f17+.)
 / = macro(props+f17+/)
 
-[psinkbols]
-h = left
-j = down
-k = up
-l = right
-y = ^
-u = equal
-i = <
-o = >
-n = %
-m = _
-, = #
-. = '
-8 = &
-9 = |
-
-~ = macro(->)
-2 = "
-3 = ?
-4 = $
-5 = ~
-q = +
-w = [
-e = ]
-r = {
-t = !
-a = -
-s = (
-d = )
-f = }
-g = macro(:)
-z = @
-x = /
-c = *
-v = \
-rightalt = noop
-rightmeta = noop
-rightcontrol = noop
 
 [altgr]
-h = macro(front+h)
 up = volumeup
 down = volumedown
 left = micmute
 right = mute
-
-[altgr+psinkbols]
-h = macro(leftmeta+left)
-j = macro(leftmeta+down)
-k = macro(leftmeta+up)
-l = macro(leftmeta+right)
 
 [funcs]
 2 = f1
@@ -361,13 +357,6 @@ k = up
 l = right
 
 [keypad]
-q = macro(leftmeta+q)
-a = macro(leftmeta+a)
-s = left
-d = down
-f = right
-e = up
-
 m = kp1
 , = kp2
 . = kp3
@@ -378,15 +367,19 @@ u = kp7
 i = kp8
 o = kp9
 rightalt = kp0
-
-8 = kpslash
-9 = kpasterisk
 y = kpplus
 n = kpminus
 / = kpenter 
 p = backspace
 rightmeta = kpdot
 rightcontrol = kpdot
+q = macro(leftmeta+q)
+a = macro(leftmeta+a)
+s = left
+d = down
+f = right
+e = up
+
 
 [slowmouse]
 y = macro(props+home)
@@ -407,16 +400,6 @@ m = macro2(20, 35, macro(leftshift+f16))
 capslock = clear()
 
 [sunprops]
-#1 = macro(props+1)
-#2 = macro(props+2)
-#3 = macro(props+3)
-#4 = macro(props+4)
-#5 = macro(props+5)
-#6 = macro(props+6)
-7 = macro(props+7)
-8 = macro(props+8)
-9 = macro(props+9)
-0 = macro(props+0)
 #q = macro(props+f5)
 w = macro(props+w)
 e = macro(props+e)
@@ -460,7 +443,6 @@ rightbrace = macro(props+rightbrace)
 apostrophe = macro(props+apostrophe)
 backspace = macro(props+backspace)
 backslash = macro(props+backslash)
-space = leftmouse
 
 [global]
 overload_tap_timeout = 650
