--- a/php/php.ini
+++ b/php/php.ini
@@ -926,7 +926,7 @@ extension=curl
 ;extension=gettext
 ;extension=gmp
 extension=iconv
-;extension=intl
+extension=intl
 ;extension=ldap
 extension=mysqli
 ;extension=odbc
@@ -936,6 +936,8 @@ extension=pdo_mysql
 ;extension=pdo_odbc
 ;extension=pdo_pgsql
 extension=pdo_sqlite
+extension=sqlsrv
+extension=pdo_sqlsrv
 ;extension=pgsql
 ;extension=pspell
 ;extension=shmop
